--- a/CCalcTests/Info.plist
+++ b/CCalcTests/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.joshwoods.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.joshwoods.ccalc</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
